Integrate activation 2.1.2, update build plugins, update references to new repo location
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>